--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,14 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+Выбрать id пользователя:
+<form method="get" action="meals">
+    <select name="userId" required>
+        <option name="1">1</option>
+        <option name="2">2</option>
+    </select>
+    <input type="submit" value="Выбрать">
+</form>
 <ul>
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
